quarkc/parser/generated/QuarkParser.py
# Generated from QuarkParser.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class QuarkParser ( Parser ):

    grammarFileName = "QuarkParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'namespace'", u"'primitive'", u"'interface'", u"'class'", 
                     u"'extends'", u"'import'", u"'as'", u"'new'", u"'if'", 
                     u"'else'", u"'return'", u"'while'", u"'switch'", u"'case'", 
                     u"'break'", u"'continue'", u"'null'", u"'true'", u"'false'", 
                     u"<INVALID>", u"<INVALID>", u"'<'", u"'>'", u"','", 
                     u"'('", u"')'", u"'['", u"']'", u"';'", u"':'", u"'.'", 
                     u"'='", u"'=='", u"'!='", u"'<='", u"'>='", u"'+'", 
                     u"'-'", u"'*'", u"'/'", u"'%'", u"'!'", u"'?'", u"'&&'", 
                     u"'||'", u"<INVALID>", u"<INVALID>", u"'for'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'$('" ]

    symbolicNames = [ u"<INVALID>", u"WS", u"COMMENT", u"MULTILINE_COMMENT", 
                      u"NAMESPACE", u"PRIMITIVE", u"INTERFACE", u"CLASS", 
                      u"EXTENDS", u"IMPORT", u"AS", u"NEW", u"IF", u"ELSE", 
                      u"RETURN", u"WHILE", u"SWITCH", u"CASE", u"BREAK", 
                      u"CONTINUE", u"NULL", u"TRUE", u"FALSE", u"LBRACE", 
                      u"RBRACE", u"LT", u"GT", u"COMMA", u"LPAREN", u"RPAREN", 
                      u"LBRACK", u"RBRACK", u"SEMI", u"COLON", u"DOT", u"EQ", 
                      u"EQL", u"NEQ", u"LE", u"GE", u"PLUS", u"MINUS", u"MUL", 
                      u"DIV", u"MOD", u"BANG", u"QMARK", u"AND", u"OR", 
                      u"STRING", u"NUMBER", u"FOR_LANG", u"ID", u"ANNOTATION", 
                      u"ERROR", u"NATIVE_WS", u"NATIVE_IMPORT", u"LANG", 
                      u"ISTRING", u"NATIVE_START", u"NATIVE_HEADER_ERROR", 
                      u"NATIVE_CODE", u"QVAR", u"QEXPR", u"NATIVE_LBRACE", 
                      u"NATIVE_RBRACE", u"NATIVE_ERROR" ]

    RULE_qfile = 0
    RULE_definition = 1
    RULE_annotations = 2
    RULE_annotation = 3
    RULE_namespace = 4
    RULE_qimport = 5
    RULE_function = 6
    RULE_parameter = 7
    RULE_primitive = 8
    RULE_qinterface = 9
    RULE_qclass = 10
    RULE_tparams = 11
    RULE_tparam = 12
    RULE_field = 13
    RULE_native_body = 14
    RULE_native_fragment = 15
    RULE_body = 16
    RULE_statement = 17
    RULE_simple = 18
    RULE_local = 19
    RULE_assign = 20
    RULE_lhs = 21
    RULE_evaluate = 22
    RULE_qbreak = 23
    RULE_qcontinue = 24
    RULE_qreturn = 25
    RULE_compound = 26
    RULE_qif = 27
    RULE_qwhile = 28
    RULE_qswitch = 29
    RULE_qcase = 30
    RULE_expr = 31
    RULE_entry = 32
    RULE_exprs = 33
    RULE_qtype = 34
    RULE_path = 35
    RULE_name = 36

    ruleNames =  [ u"qfile", u"definition", u"annotations", u"annotation", 
                   u"namespace", u"qimport", u"function", u"parameter", 
                   u"primitive", u"qinterface", u"qclass", u"tparams", u"tparam", 
                   u"field", u"native_body", u"native_fragment", u"body", 
                   u"statement", u"simple", u"local", u"assign", u"lhs", 
                   u"evaluate", u"qbreak", u"qcontinue", u"qreturn", u"compound", 
                   u"qif", u"qwhile", u"qswitch", u"qcase", u"expr", u"entry", 
                   u"exprs", u"qtype", u"path", u"name" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    MULTILINE_COMMENT=3
    NAMESPACE=4
    PRIMITIVE=5
    INTERFACE=6
    CLASS=7
    EXTENDS=8
    IMPORT=9
    AS=10
    NEW=11
    IF=12
    ELSE=13
    RETURN=14
    WHILE=15
    SWITCH=16
    CASE=17
    BREAK=18
    CONTINUE=19
    NULL=20
    TRUE=21
    FALSE=22
    LBRACE=23
    RBRACE=24
    LT=25
    GT=26
    COMMA=27
    LPAREN=28
    RPAREN=29
    LBRACK=30
    RBRACK=31
    SEMI=32
    COLON=33
    DOT=34
    EQ=35
    EQL=36
    NEQ=37
    LE=38
    GE=39
    PLUS=40
    MINUS=41
    MUL=42
    DIV=43
    MOD=44
    BANG=45
    QMARK=46
    AND=47
    OR=48
    STRING=49
    NUMBER=50
    FOR_LANG=51
    ID=52
    ANNOTATION=53
    ERROR=54
    NATIVE_WS=55
    NATIVE_IMPORT=56
    LANG=57
    ISTRING=58
    NATIVE_START=59
    NATIVE_HEADER_ERROR=60
    NATIVE_CODE=61
    QVAR=62
    QEXPR=63
    NATIVE_LBRACE=64
    NATIVE_RBRACE=65
    NATIVE_ERROR=66

    def __init__(self, input):
        super(QuarkParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class QfileContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.QfileContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._definition = None # DefinitionContext
            self.definitions = list() # of DefinitionContexts

        def EOF(self):
            return self.getToken(QuarkParser.EOF, 0)

        def definition(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(QuarkParser.DefinitionContext,i)


        def getRuleIndex(self):
            return QuarkParser.RULE_qfile

        def enterRule(self, listener):
            if hasattr(listener, "enterQfile"):
                listener.enterQfile(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitQfile"):
                listener.exitQfile(self)




    def qfile(self):

        localctx = QuarkParser.QfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_qfile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QuarkParser.NAMESPACE) | (1 << QuarkParser.PRIMITIVE) | (1 << QuarkParser.INTERFACE) | (1 << QuarkParser.CLASS) | (1 << QuarkParser.IMPORT) | (1 << QuarkParser.ID) | (1 << QuarkParser.ANNOTATION))) != 0):
                self.state = 74
                localctx._definition = self.definition()
                localctx.definitions.append(localctx._definition)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(QuarkParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.DefinitionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def namespace(self):
            return self.getTypedRuleContext(QuarkParser.NamespaceContext,0)


        def qimport(self):
            return self.getTypedRuleContext(QuarkParser.QimportContext,0)


        def function(self):
            return self.getTypedRuleContext(QuarkParser.FunctionContext,0)


        def primitive(self):
            return self.getTypedRuleContext(QuarkParser.PrimitiveContext,0)


        def qinterface(self):
            return self.getTypedRuleContext(QuarkParser.QinterfaceContext,0)


        def qclass(self):
            return self.getTypedRuleContext(QuarkParser.QclassContext,0)


        def getRuleIndex(self):
            return QuarkParser.RULE_definition

        def enterRule(self, listener):
            if hasattr(listener, "enterDefinition"):
                listener.enterDefinition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefinition"):
                listener.exitDefinition(self)




    def definition(self):

        localctx = QuarkParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.namespace()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.qimport()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.function()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.primitive()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.qinterface()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.qclass()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AnnotationsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.AnnotationsContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._annotation = None # AnnotationContext
            self.items = list() # of AnnotationContexts

        def annotation(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(QuarkParser.AnnotationContext,i)


        def getRuleIndex(self):
            return QuarkParser.RULE_annotations

        def enterRule(self, listener):
            if hasattr(listener, "enterAnnotations"):
                listener.enterAnnotations(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAnnotations"):
                listener.exitAnnotations(self)




    def annotations(self):

        localctx = QuarkParser.AnnotationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_annotations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuarkParser.ANNOTATION:
                self.state = 90
                localctx._annotation = self.annotation()
                localctx.items.append(localctx._annotation)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AnnotationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.AnnotationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ANNOTATION(self):
            return self.getToken(QuarkParser.ANNOTATION, 0)

        def LPAREN(self):
            return self.getToken(QuarkParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(QuarkParser.STRING, 0)

        def RPAREN(self):
            return self.getToken(QuarkParser.RPAREN, 0)

        def getRuleIndex(self):
            return QuarkParser.RULE_annotation

        def enterRule(self, listener):
            if hasattr(listener, "enterAnnotation"):
                listener.enterAnnotation(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAnnotation"):
                listener.exitAnnotation(self)




    def annotation(self):

        localctx = QuarkParser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_annotation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(QuarkParser.ANNOTATION)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QuarkParser.LPAREN:
                self.state = 97
                self.match(QuarkParser.LPAREN)
                self.state = 98
                self.match(QuarkParser.STRING)
                self.state = 99
                self.match(QuarkParser.RPAREN)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamespaceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.NamespaceContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._definition = None # DefinitionContext
            self.definitions = list() # of DefinitionContexts

        def annotations(self):
            return self.getTypedRuleContext(QuarkParser.AnnotationsContext,0)


        def NAMESPACE(self):
            return self.getToken(QuarkParser.NAMESPACE, 0)

        def name(self):
            return self.getTypedRuleContext(QuarkParser.NameContext,0)


        def LBRACE(self):
            return self.getToken(QuarkParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(QuarkParser.RBRACE, 0)

        def definition(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(QuarkParser.DefinitionContext,i)


        def getRuleIndex(self):
            return QuarkParser.RULE_namespace

        def enterRule(self, listener):
            if hasattr(listener, "enterNamespace"):
                listener.enterNamespace(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNamespace"):
                listener.exitNamespace(self)




    def namespace(self):

        localctx = QuarkParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_namespace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.annotations()
            self.state = 103
            self.match(QuarkParser.NAMESPACE)
            self.state = 104
            self.name()
            self.state = 105
            self.match(QuarkParser.LBRACE)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QuarkParser.NAMESPACE) | (1 << QuarkParser.PRIMITIVE) | (1 << QuarkParser.INTERFACE) | (1 << QuarkParser.CLASS) | (1 << QuarkParser.IMPORT) | (1 << QuarkParser.ID) | (1 << QuarkParser.ANNOTATION))) != 0):
                self.state = 106
                localctx._definition = self.definition()
                localctx.definitions.append(localctx._definition)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(QuarkParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QimportContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.QimportContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.alias = None # NameContext

        def IMPORT(self):
            return self.getToken(QuarkParser.IMPORT, 0)

        def path(self):
            return self.getTypedRuleContext(QuarkParser.PathContext,0)


        def SEMI(self):
            return self.getToken(QuarkParser.SEMI, 0)

        def AS(self):
            return self.getToken(QuarkParser.AS, 0)

        def name(self):
            return self.getTypedRuleContext(QuarkParser.NameContext,0)


        def getRuleIndex(self):
            return QuarkParser.RULE_qimport

        def enterRule(self, listener):
            if hasattr(listener, "enterQimport"):
                listener.enterQimport(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitQimport"):
                listener.exitQimport(self)




    def qimport(self):

        localctx = QuarkParser.QimportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_qimport)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(QuarkParser.IMPORT)
            self.state = 115
            self.path()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QuarkParser.AS:
                self.state = 116
                self.match(QuarkParser.AS)
                self.state = 117
                localctx.alias = self.name()


            self.state = 120
            self.match(QuarkParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.FunctionContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._parameter = None # ParameterContext
            self.parameters = list() # of ParameterContexts

        def annotations(self):
            return self.getTypedRuleContext(QuarkParser.AnnotationsContext,0)


        def name(self):
            return self.getTypedRuleContext(QuarkParser.NameContext,0)


        def LPAREN(self):
            return self.getToken(QuarkParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(QuarkParser.RPAREN, 0)

        def native_body(self):
            return self.getTypedRuleContext(QuarkParser.Native_bodyContext,0)


        def body(self):
            return self.getTypedRuleContext(QuarkParser.BodyContext,0)


        def SEMI(self):
            return self.getToken(QuarkParser.SEMI, 0)

        def qtype(self):
            return self.getTypedRuleContext(QuarkParser.QtypeContext,0)


        def parameter(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.ParameterContext)
            else:
                return self.getTypedRuleContext(QuarkParser.ParameterContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(QuarkParser.COMMA)
            else:
                return self.getToken(QuarkParser.COMMA, i)

        def getRuleIndex(self):
            return QuarkParser.RULE_function

        def enterRule(self, listener):
            if hasattr(listener, "enterFunction"):
                listener.enterFunction(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFunction"):
                listener.exitFunction(self)




    def function(self):

        localctx = QuarkParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.annotations()
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 123
                self.qtype()


            self.state = 126
            self.name()
            self.state = 127
            self.match(QuarkParser.LPAREN)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QuarkParser.ID:
                self.state = 128
                localctx._parameter = self.parameter()
                localctx.parameters.append(localctx._parameter)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==QuarkParser.COMMA:
                    self.state = 129
                    self.match(QuarkParser.COMMA)
                    self.state = 130
                    localctx._parameter = self.parameter()
                    localctx.parameters.append(localctx._parameter)
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 138
            self.match(QuarkParser.RPAREN)
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QuarkParser.FOR_LANG]:
                self.state = 139
                self.native_body()
                pass
            elif token in [QuarkParser.LBRACE]:
                self.state = 140
                self.body()
                pass
            elif token in [QuarkParser.SEMI]:
                self.state = 141
                self.match(QuarkParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.ParameterContext, self).__init__(parent, invokingState)
            self.parser = parser

        def qtype(self):
            return self.getTypedRuleContext(QuarkParser.QtypeContext,0)


        def name(self):
            return self.getTypedRuleContext(QuarkParser.NameContext,0)


        def getRuleIndex(self):
            return QuarkParser.RULE_parameter

        def enterRule(self, listener):
            if hasattr(listener, "enterParameter"):
                listener.enterParameter(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParameter"):
                listener.exitParameter(self)




    def parameter(self):

        localctx = QuarkParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.qtype()
            self.state = 145
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.PrimitiveContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._native_body = None # Native_bodyContext
            self.mappings = list() # of Native_bodyContexts
            self._function = None # FunctionContext
            self.definitions = list() # of FunctionContexts

        def annotations(self):
            return self.getTypedRuleContext(QuarkParser.AnnotationsContext,0)


        def PRIMITIVE(self):
            return self.getToken(QuarkParser.PRIMITIVE, 0)

        def name(self):
            return self.getTypedRuleContext(QuarkParser.NameContext,0)


        def LBRACE(self):
            return self.getToken(QuarkParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(QuarkParser.RBRACE, 0)

        def tparams(self):
            return self.getTypedRuleContext(QuarkParser.TparamsContext,0)


        def native_body(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.Native_bodyContext)
            else:
                return self.getTypedRuleContext(QuarkParser.Native_bodyContext,i)


        def function(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.FunctionContext)
            else:
                return self.getTypedRuleContext(QuarkParser.FunctionContext,i)


        def getRuleIndex(self):
            return QuarkParser.RULE_primitive

        def enterRule(self, listener):
            if hasattr(listener, "enterPrimitive"):
                listener.enterPrimitive(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrimitive"):
                listener.exitPrimitive(self)




    def primitive(self):

        localctx = QuarkParser.PrimitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_primitive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.annotations()
            self.state = 148
            self.match(QuarkParser.PRIMITIVE)
            self.state = 149
            self.name()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QuarkParser.LT:
                self.state = 150
                self.tparams()


            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuarkParser.FOR_LANG:
                self.state = 153
                localctx._native_body = self.native_body()
                localctx.mappings.append(localctx._native_body)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self.match(QuarkParser.LBRACE)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuarkParser.ID or _la==QuarkParser.ANNOTATION:
                self.state = 160
                localctx._function = self.function()
                localctx.definitions.append(localctx._function)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(QuarkParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QinterfaceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.QinterfaceContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._function = None # FunctionContext
            self.definitions = list() # of FunctionContexts

        def annotations(self):
            return self.getTypedRuleContext(QuarkParser.AnnotationsContext,0)


        def INTERFACE(self):
            return self.getToken(QuarkParser.INTERFACE, 0)

        def name(self):
            return self.getTypedRuleContext(QuarkParser.NameContext,0)


        def LBRACE(self):
            return self.getToken(QuarkParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(QuarkParser.RBRACE, 0)

        def tparams(self):
            return self.getTypedRuleContext(QuarkParser.TparamsContext,0)


        def function(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.FunctionContext)
            else:
                return self.getTypedRuleContext(QuarkParser.FunctionContext,i)


        def getRuleIndex(self):
            return QuarkParser.RULE_qinterface

        def enterRule(self, listener):
            if hasattr(listener, "enterQinterface"):
                listener.enterQinterface(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitQinterface"):
                listener.exitQinterface(self)




    def qinterface(self):

        localctx = QuarkParser.QinterfaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_qinterface)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.annotations()
            self.state = 169
            self.match(QuarkParser.INTERFACE)
            self.state = 170
            self.name()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QuarkParser.LT:
                self.state = 171
                self.tparams()


            self.state = 174
            self.match(QuarkParser.LBRACE)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuarkParser.ID or _la==QuarkParser.ANNOTATION:
                self.state = 175
                localctx._function = self.function()
                localctx.definitions.append(localctx._function)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.match(QuarkParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QclassContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QuarkParser.QclassContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._qtype = None # QtypeContext
            self.bases = list() # of QtypeContexts
            self._field = None # FieldContext
            self.fields = list() # of FieldContexts
            self._function = None # FunctionContext
            self.methods = list() # of FunctionContexts

        def annotations(self):
            return self.getTypedRuleContext(QuarkParser.AnnotationsContext,0)


        def CLASS(self):
            return self.getToken(QuarkParser.CLASS, 0)

        def name(self):
            return self.getTypedRuleContext(QuarkParser.NameContext,0)


        def LBRACE(self):
            return self.getToken(QuarkParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(QuarkParser.RBRACE, 0)

        def tparams(self):
            return self.getTypedRuleContext(QuarkParser.TparamsContext,0)


        def EXTENDS(self):
            return self.getToken(QuarkParser.EXTENDS, 0)

        def qtype(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.QtypeContext)
            else:
                return self.getTypedRuleContext(QuarkParser.QtypeContext,i)


        def field(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.FieldContext)
            else:
                return self.getTypedRuleContext(QuarkParser.FieldContext,i)


        def function(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QuarkParser.FunctionContext)
            else:
                return self.getTypedRuleContext(QuarkParser.FunctionContext,i)


        def COMMA(self):
            return self.getToken(QuarkParser.COMMA, 0)

        def getRuleIndex(self):
            return QuarkParser.RULE_qclass

        def enterRule(self, listener):
            if hasattr(listener, "enterQclass"):
                listener.enterQclass(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitQclass"):
                listener.exitQclass(self)




    def qclass(self):

        localctx = QuarkParser.QclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_qclass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.annotations()
            self.state = 184
            self.match(QuarkParser.CLASS)
            self.state = 185
            self.name()
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QuarkParser.LT:
                self.state = 186
                self.tparams()

